replace detail link to edit

--- a/bims/templates/non_validated_location_site.html
+++ b/bims/templates/non_validated_location_site.html
@@ -93,7 +93,7 @@
                         <a onclick="rejectObject({{ obj.pk }})" class="btn btn-default" data-toggle="tooltip" title="Reject this data"><i class="fa fa-times-circle"></i></a>
                     </span>
                     <span class="reject-action">
-                        <a href="/nonvalidated-site/detail/{{ obj.pk }}/" class="btn btn-default" data-toggle="tooltip" title="View site detail"><i class="fa fa-eye"></i></a>
+                        <a href="/location-site-form/update/?id={{ obj.pk }}" class="btn btn-default" data-toggle="tooltip" title="View site detail"><i class="fa fa-eye"></i></a>
                     </span>
                 </td>
             </tr>
