--- a/bims/templates/collections_form_page.html
+++ b/bims/templates/collections_form_page.html
@@ -21,6 +21,7 @@
         const defaultWMSSiteParameters = '{{ preferences.SiteSetting.default_location_site_cluster }}';
         const taxonGroupName = '{{ taxon_group_name }}';
         const csrfToken = '{{ csrf_token }}';
+        const bingKey = '{{ bing_key }}';
     </script>
 
 {% endblock %}
