Fix missing bing kye

--- a/bims/templates/site_visit/site_visit_detail.html
+++ b/bims/templates/site_visit/site_visit_detail.html
@@ -21,6 +21,7 @@
         const locationSiteGeoserverLayer = '{{ bims_preferences.geoserver_location_site_layer }}';
         const defaultWMSSiteParameters = '{{ preferences.SiteSetting.default_location_site_cluster }}';
         const taxonGroupName = '{{ taxon_group.name }}';
+        const bingKey = '{{ bing_key }}';
     </script>
     <style>
         .btn-normal {
