--- a/sass/templates/form_only_read_page.html
+++ b/sass/templates/form_only_read_page.html
@@ -19,7 +19,8 @@
         const location_site_lon = '{{ location_site_lon }}';
         const geoserverPublicUrl = '{{ geoserver_public_location }}';
         const locationSiteGeoserverLayer = '{{ bims_preferences.geoserver_location_site_layer }}';
-        const defaultWMSSiteParameters = '{{ preferences.SiteSetting.default_location_site_cluster }}'
+        const defaultWMSSiteParameters = '{{ preferences.SiteSetting.default_location_site_cluster }}';
+        const bingKey = '{{ bing_key }}';
     </script>
 
 {% endblock %}
