Add missing bing key

--- a/bims/templates/site_visit/site_visit_update.html
+++ b/bims/templates/site_visit/site_visit_update.html
@@ -22,6 +22,7 @@
         const defaultWMSSiteParameters = '{{ preferences.SiteSetting.default_location_site_cluster }}';
         const taxonGroupName = '{{ taxon_group.name }}';
         const csrfToken = '{{ csrf_token }}';
+        const bingKey = '{{ bing_key }}';
     </script>
 
 {% endblock %}
