--- a/bims/templates/site_visit/site_visit_detail.html
+++ b/bims/templates/site_visit/site_visit_detail.html
@@ -41,19 +41,18 @@
         </div>
         {% if user.is_superuser or owner == user or collector == user %}
             <a class="btn btn-primary btn-normal" href="/site-visit/update/{{ object.id }}/">Edit</a>
-            {# <div class="btn btn-danger btn-normal" style="margin-bottom: 10px;" data-toggle="modal" data-target="#confirm-submit">Delete</div>#}
+             <div class="btn btn-danger btn-normal" style="margin-bottom: 10px;" data-toggle="modal" data-target="#confirm-submit">Delete</div>
             <div class="modal fade" id="confirm-submit" tabindex="-1"
                  role="dialog"
                  aria-labelledby="myModalLabel" aria-hidden="true">
-                <form method="POST" action="/sass/delete/{{ site_visit_id }}/">
+                <form method="POST" action="/site-visit/delete/{{ object.id }}/">
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
                                 Confirm Delete
                             </div>
                             <div class="modal-body">
-                                Are you sure you want to delete this Site Visit
-                                record?
+                                Are you sure you want to delete this Site Visit?
                             </div>
                             <div class="modal-footer">
                                 <button type="button" id="cancel-submit"
