--- a/bims/templates/taxa_management.html
+++ b/bims/templates/taxa_management.html
@@ -161,6 +161,10 @@
             overflow-y: auto; /* Trigger vertical scroll    */
             overflow-x: hidden; /* Hide the horizontal scroll */
         }
+
+        .list-form {
+            height: 100%;
+        }
     </style>
     <script>
         const sourceCollection = {{ source_collections | safe }};
@@ -356,7 +360,8 @@
                     <tbody id="taxa-list">
                     </tbody>
                 </table>
-                <div class="pagination-centered" style="display:none">
+            </div>
+            <div class="pagination-centered" style="display:none">
                     <ul class="pagination">
                         <li class="arrow"><a href="#"
                                              class="pagination pagination-previous">&laquo;</a>
@@ -370,9 +375,7 @@
                                              class="pagination pagination-next">&raquo;</a>
                         </li>
                     </ul>
-                </div>
             </div>
-
         </div>
     </div>
 
