--- a/bims/templates/taxa_management.html
+++ b/bims/templates/taxa_management.html
@@ -163,7 +163,7 @@
         }
 
         .list-form {
-            height: 100%;
+            height: calc(100% + 125px);
         }
     </style>
     <script>
