--- a/deployment/ansible/development/roles/docker_compose/templates/docker-compose.override.yml.j2
+++ b/deployment/ansible/development/roles/docker_compose/templates/docker-compose.override.yml.j2
@@ -46,8 +46,9 @@ services:
 
   uwsgi:
     build:
-      context: docker
-      dockerfile: Dockerfile-dev
+      context: ${PWD}
+      dockerfile: deployment/docker/Dockerfile
+      target: dev
     environment:
 
       {% for key, value in django.environment.items() %}
