Source reference database

--- a/bims/static/react/css/SourceReference.scss
+++ b/bims/static/react/css/SourceReference.scss
@@ -55,4 +55,8 @@
   .react-autosuggest__suggestion--highlighted {
     background-color: #b9dcff;
   }
+
+  .required-input label {
+    font-weight: bold;
+  }
 }
