--- a/bims/templates/edit_source_reference.html
+++ b/bims/templates/edit_source_reference.html
@@ -68,12 +68,31 @@
                         </div>
                     </div>
                     <div class="form-group row">
+                        <label for="doi" class="col-sm-2 col-form-label">URL</label>
+                        <div class="col-sm-10">
+                            <input name="url" id="url" class="form-control" value="{{ object.source.url }}"/>
+                        </div>
+                    </div>
+                    <div class="form-group row">
                         <label for="source_id" class="col-sm-2 col-form-label">Source</label>
                         <div class="col-sm-10">
                             <input name="source" id="source" class="form-control" value="{% if object.source.journal %}{{ object.source.journal }}{% endif %}"/>
                             {% if object.source.journal %}
                             <input type="hidden" name="source_id" id="source_id" class="form-control" value="{{ object.source.journal.id }}"/>
                             {% endif %}
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="file" class="col-sm-2 col-form-label">Upload a PDF</label>
+                        <div class="col-sm-10">
+                            {% if object.document %}
+                                <div id="biblioDocumentContainer">
+                                    <a href="/documents/{{ object.document.id }}/download">{{ object.document.name }}</a>
+                                    <span class="btn btn-danger" id="removeDocument">Remove</span>
+                                </div>
+                            {% endif %}
+                            <input type="hidden" id="pdf_file_id" name="pdf_file_id" value="{{ object.document.id }}">
+                            <input type="file" name="pdf_file" id="biblio_pdf" class="form-control" value="" accept="application/pdf"/>
                         </div>
                     </div>
                 {% endif %}
@@ -180,6 +199,13 @@
         let $addAuthorBtn = $('#addAuthor');
         let $deleteAuthorBtn = $('.deleteAuthor');
         let prev = null;
+
+        $('#removeDocument').click(function(e) {
+          e.preventDefault();
+          $('#biblioDocumentContainer').remove();
+          document.getElementById("pdf_file_id").value = "";
+        });
+
         $(function () {
             const rad = document.source_reference_form.doc_type;
             for (let i = 0; i < rad.length; i++) {
