--- a/sass/templates/form_only_read_page.html
+++ b/sass/templates/form_only_read_page.html
@@ -87,7 +87,7 @@
                    class="col-sm-2 col-form-label col-form-label required-text">Date</label>
             <div class="col-sm-10">
                 <input type="text" name="date"
-                       class="form-control form-control-sm" placeholder="" {% if date %} value="{{ date|date:'m/d/Y' }}" {% endif %} readonly>
+                       class="form-control form-control-sm" placeholder="" {% if date %} value="{{ date|date:'Y-m-d' }}" {% endif %} readonly>
             </div>
         </div>
 
