--- a/sass/templates/form_page.html
+++ b/sass/templates/form_page.html
@@ -77,7 +77,7 @@
             <div class="col-sm-10">
                 <input type="text" name="date"
                        class="form-control form-control-sm"
-                       id="date" placeholder="" {% if date %} value="{{ date|date:'m/d/Y' }}" {% endif %} required>
+                       id="date" placeholder="" {% if date %} value="{{ date|date:'Y-m-d' }}" {% endif %} required>
                 <div class="invalid-feedback">
                     Please provide a valid date
                 </div>
