Update main branch (#2823)
* Fix group member signal (#2747)

* Fix filter owner (#2754)

* Geocontext v2 (#2753)

* geocontext v2 (#2735)

* fix broken link  (#2743)

* geocontext v2

* fix borken link

* Fix river name api (#2751)

* geocontext v2

* fix borken link

* update river name api

Co-authored-by: Faneva Andriamiadantsoa <fanevanjanahary@gmail.com>

* Ignore lat and lon check if site is found (#2758)

* Fix multiple database creted (#2763)

* Ignore lat and lon check if site is found

* Update uploader

* Update GBIF harvesting script (#2765)

* Update geomorphological_zone.py (#2768)

* Update site_code.py (#2769)

* Update import_gbif_occurrences.py (#2771)

* Add a command to fix gbif site codes (#2793)

* Fix location sites overview (#2794)

* Add source reference (#2792)

* Initial

* Update

* Update 2

* Source reference database

* Handle published report

* Unpublished data

* Peer reviewed

* Update deployment configuration

* Add override template

* Add source reference button

* Update deployment

* Update dockerimage.yml

* Add a script to copy and restore backup from live site (#2799)

* Update multiple module filter (#2800)

* Add url and pdf in peer-reviewed edit mode (#2802)

* Return taxonomy name instead of original species name in csv (#2803)

* add river layer when adding data (#2770)

* add GBIF fields (#2773)

* exclude gbif site (#2785)

* add gbif options (#2801)

* Fix abiotic download in sass dashboard (#2804)

* Fix metadata not showing up sometimes (#2805)

* Multiple country codes for location site add (#2806)

* Update gbif to get data from multiple country (#2807)

* Fix SASS v4 form (#2811)

* Fix site code generator bug (#2809)

* Fix uploader (#2812)

* Fix #2781 DOI not recognized

* Fix #2780 remove date in unpublished source

* allow to add unpublished data (#2810)

* Update source reference list (#2813)

* Ad

--- a/bims/templates/source_reference_list.html
+++ b/bims/templates/source_reference_list.html
@@ -108,6 +108,9 @@
 
             </div>
             <div class="col-lg-9 col-md-8 col-xs-12">
+                {% if perms.bims.change_sourcereference %}
+                    <a href="/add-source-reference/" class="btn btn-info" style="margin-bottom: 10px"><i class="fa fa-plus"></i>&nbsp Add Source Reference</a>
+                {% endif %}
                 {% for source_reference in object_list %}
                     <div class="card">
                         <div class="card-body">
@@ -119,6 +122,9 @@
                                     <p class="card-text"><i class="fa fa-calendar"
                                                             aria-hidden="true"></i> {{ source_reference.year }} <span class="vertical-separator"></span>  <i class="fa fa-users"
                                                             aria-hidden="true"></i> {{ source_reference.authors }}
+                                        {% if 'Published' in source_reference.reference_type %}
+                                            <span class="vertical-separator"></span> <button class="btn btn-light copy-document-id" data-document-id="{{ source_reference.source.id }}">Copy Document ID</button>
+                                        {% endif %}
                                     </p>
                                 </div>
                             </div>
@@ -165,6 +171,14 @@
 
         const csrfToken = '{{ csrf_token }}';
         const authorIds = [];
+
+        $('.copy-document-id').click(function (e) {
+          let documentId = window.location.origin + '/documents/' + $(e.target).data('document-id');
+          /* Copy the text inside the text field */
+          navigator.clipboard.writeText(documentId);
+          /* Alert the copied text */
+          alert("Copied the text: " + documentId);
+        })
 
         $('.custom-control-input').change(function (e) {
             let $parent = $(e.target).parent().parent();
