add warter temperature

--- a/bims/templates/location_site_form_view.html
+++ b/bims/templates/location_site_form_view.html
@@ -91,6 +91,7 @@
                         <a href="/invert-form/?siteId={{ site_id }}" class="btn btn-info">Add invertebrate data</a>
                         <a href="/sass/{{ site_id }}/" class="btn btn-info">Add SASS data</a>
                         <a href="/algae-form/?siteId={{ site_id }}" class="btn btn-info">Add algal data</a>
+                        <a href="/water-temperature-form/?siteId={{ site_id }}" class="btn btn-info">Add water temperature data</a>
                     </div>
                 </div>
             {% endif %}
