Add attribute to taxon on save

--- a/bims/templates/taxa_management.html
+++ b/bims/templates/taxa_management.html
@@ -540,7 +540,9 @@
                     <button type="button" class="btn btn-secondary"
                             data-dismiss="modal">Close
                     </button>
-                    <button type="submit" class="btn btn-primary">
+                    <button type="submit" class="btn btn-primary btn-submit">
+                        <img class="loading-btn" src="/static/img/small-loading.svg" width="20" style="filter: brightness(104%) contrast(97%); display: none"
+                             alt="Loading view">
                         Save
                     </button>
                 </div>
