Update taxa template

--- a/bims/templates/taxa_uploader.html
+++ b/bims/templates/taxa_uploader.html
@@ -29,13 +29,7 @@
                     <div class="help-block-space"></div>
                     <strong>You can download the template here :</strong>
                     {% block download_example_button %}
-                        {% if preferences.SiteSetting.taxonomic_upload_template %}
-                            <a href="{{ preferences.SiteSetting.taxonomic_upload_template.url }}"
-                               download="{{ preferences.SiteSetting.taxonomic_upload_template.name }}">Download Template</a>
-                        {% else %}
-                            <a href="{% static "data/taxa_sample.csv" %}"
-                               download="taxonomic_template_file.csv">Download Template</a>
-                        {% endif %}
+                         <a href="#" onclick="download_template()">Download Template</a>
                     {% endblock %}
 
                     {% if not upload_sessions %}
@@ -199,6 +193,8 @@
         </div>
     </div>
 
+    <iframe id="download_iframe" style="display:none;"></iframe>
+
 
 {% endblock %}
 
@@ -234,6 +230,11 @@
             }, 1000);
         }
 
+        function download_template() {
+            const taxonGroupId = $('#taxon-group').val();
+            window.open('/download-taxa-template?taxon_group=' + taxonGroupId);
+        }
+
         $(function () {
             let progressBar = $('.progress-bar');
             $.each(progressBar, function (index, elm) {
@@ -258,7 +259,6 @@
             $('#cancelModal').on('shown.bs.modal', function (event) {
                  let triggerElement = $(event.relatedTarget);
                  currentSessionId = triggerElement.data('id');
-                 console.log(currentSessionId);
             });
         });
 
