--- a/bims/templates/water_temperature_form.html
+++ b/bims/templates/water_temperature_form.html
@@ -40,6 +40,9 @@
                  style="display: none;">
 
             </div>
+            <div class="alert alert-success" role="alert"
+                 style="display: none;">
+            </div>
             <div id="fish-map"></div>
             <div class="form-group row">
                 <label for="date"
@@ -61,12 +64,10 @@
             </div>
 
             <div class="separator-line"></div>
-            <input type="hidden" value="" id="taxa-id-list"
-                   name="taxa-id-list">
 
             <div class="form-group row even-row">
                 <label for="date"
-                       class="col-sm-2 col-form-label col-form-label required-text">Owner</label>
+                       class="col-sm-2 col-form-label col-form-label">Owner</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control form-control-sm"
                            onClick="this.setSelectionRange(0, this.value.length)"
@@ -94,6 +95,25 @@
                     </select>
                 </div>
             </div>
+            <div class="form-group row">
+                <label for="date"
+                       class="col-sm-2 col-form-label col-form-label">Date Format</label>
+                <div class="col-sm-10">
+                    <select class="form-control"
+                            name="format" id="format-date">
+                            <option value="%Y-%m-%d">YYYY-MM-DD</option>
+                            <option value="%m-%d-%Y">MM-DD-YYYY</option>
+                            <option value="%d-%m-%Y">DD-MM-YYYY</option>
+                            <option value="%Y/%m/%d">YYYY/MM/DD</option>
+                            <option value="%m/%d/%Y">MM/DD/YYYY</option>
+                            <option value="%d/%m/%Y">DD/MM/YYYY</option>
+                            <option value="%d/%m/%Y">DD/MM/YYYY</option>
+                            <option value="%d-%b-%Y">01-Jan-2021</option>
+                            <option value="%d-%b-%y">01-Jan-21</option>
+                            <option value="%d %B %Y">01 January 2021</option>
+                    </select>
+                </div>
+            </div>
 
             <div class="form-group row">
                 <label for="date"
@@ -102,7 +122,7 @@
                     <div class="form-group">
                         <div class="input-group input-file">
                             <input type="file" class="form-control"
-                                   accept=".xlsx, .xls, .csv" name="xlsx_file"
+                                   accept=".xlsx, .xls, .csv" name="water_file" id="water_file"
                                    placeholder='Choose a file...'/>
 {#                            <div class="invalid-feedback">#}
 {#                            Please provide a xlsx file#}
@@ -127,7 +147,11 @@
                 </div>
             </div>
             <div class="submit-wrapper">
-                <a href="#" id="upload" class="btn btn-success success" disabled>Upload</a>
+                <input type="button" name="btn" id="upload"
+                       data-toggle="modal"
+                       data-target="#confirm-submit"
+                       class="btn btn-info"
+                       value="Upload" disabled>
             </div>
             <script>
                 const checkbox = document.getElementById('disclaimerCheck');
@@ -139,6 +163,7 @@
                         upload.disabled = true;
                     }
                 })
+
             </script>
 
     </form>
