--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -40,7 +40,7 @@
         {% if bims_preferences.enable_module_filter %}
             <div class="row sub-filter">
                 <div class="col-lg-12 subtitle">
-                    MODULE <i
+                    BIODIVERSITY MODULE <i
                         class="fa fa-angle-up pull-right filter-icon-arrow"></i><i
                         class="fa fa-angle-down pull-right filter-icon-arrow"></i>
                 </div>
@@ -51,7 +51,11 @@
                 <hr class="module-hr"/>
                 <div class="form-check module-checkbox-wrapper">
                     <input type="checkbox" class="form-check-input" id="abiotic-data-filter">
-                    <label class="form-check-label" for="abiotic-data-filter">Abiotic Data</label>
+                    <label class="form-check-label" for="abiotic-data-filter">Abiotic Module</label>
+                </div>
+                <div class="form-check module-checkbox-wrapper">
+                    <input type="checkbox" class="form-check-input" id="thermal-module-filter">
+                    <label class="form-check-label" for="thermal-module-filter">Thermal Module</label>
                 </div>
                 <div class="button-filter-wrapper button-filter-module">
                     <button class="apply-filter"><i class="fa fa-check"
